--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@mui/material": "^5.15.20",
     "@types/react-datepicker": "^6.2.0",
     "firebase": "^10.12.2",
+    "firestore": "^1.1.6",
     "papaparse": "^5.4.1",
     "react": "^18.3.1",
     "react-csv": "^2.2.2",
     "react-datepicker": "^7.1.0",
     "react-dom": "^18.3.1",
+    "react-firebase-hooks": "^5.1.1",
     "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
